implementations/rust/ockam/ockam_node_test_attribute/tests/node_test/fail_if_passed_param_is_wrong_type.stderr
error: Expected `ockam::Context` found `std::string::String`
 --> tests/node_test/fail_if_passed_param_is_wrong_type.rs:5:23
  |
5 | async fn my_test(ctx: std::string::String) -> ockam::Result<()> {}
  |                       ^^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/node_test/fail_if_passed_param_is_wrong_type.rs:4:1
  |
4 | / #[ockam_node_test_attribute::node_test]
5 | | async fn my_test(ctx: std::string::String) -> ockam::Result<()> {}
  | |__________________________________________________________________^ consider adding a `main` function to `$DIR/tests/node_test/fail_if_passed_param_is_wrong_type.rs`
